refator : 코드 재정렬

--- a/public/pages/auth/login/login.html
+++ b/public/pages/auth/login/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>로그인 | Community App</title>
@@ -9,28 +10,26 @@
     <link rel="stylesheet" href="./login.css" />
 
     <!-- 로그인 폼 컴포넌트 스타일 -->
-    <link
-      rel="stylesheet"
-      href="../../../component/body/login-form/login-form.css"
-    />
+    <link rel="stylesheet" href="../../../component/body/login-form/login-form.css" />
 
     <!-- 페이지 로직 -->
     <script type="module" src="./login.js" defer></script>
-  </head>
+</head>
 
-  <body>
+<body>
     <main class="login-page">
-      <section class="login-section">
-        <h1 class="page-title">로그인</h1>
+        <section class="login-section">
+            <h1 class="page-title">로그인</h1>
 
-        <!-- JS로 폼이 주입될 자리 -->
-        <div id="login-form-root"></div>
+            <!-- JS로 폼이 주입될 자리 -->
+            <div id="login-form-root"></div>
 
-        <p class="signup-cta">
-          아직 회원이 아니신가요?
-          <a href="../signup/signup.html">회원가입</a>
-        </p>
-      </section>
+            <p class="signup-cta">
+                아직 회원이 아니신가요?
+                <a href="../signup/signup.html">회원가입</a>
+            </p>
+        </section>
     </main>
-  </body>
+</body>
+
 </html>
