feat : body섹션 헤더, 컨테이너 그리고 푸터로 구성 변경

--- a/public/pages/auth/login/login.html
+++ b/public/pages/auth/login/login.html
@@ -2,34 +2,37 @@
 <html lang="ko">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>로그인 | Community App</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>로그인 | Community App</title>
 
-    <!-- 페이지 전용 스타일 -->
-    <link rel="stylesheet" href="./login.css" />
+  <link rel="stylesheet" href="../../../component/header/navigator/navigator.css" />
+  <link rel="stylesheet" href="../../../component/footer/footer.css" />
 
-    <!-- 로그인 폼 컴포넌트 스타일 -->
-    <link rel="stylesheet" href="../../../component/body/login-form/login-form.css" />
+  <link rel="stylesheet" href="./login.css" />
 
-    <!-- 페이지 로직 -->
-    <script type="module" src="./login.js" defer></script>
+  <link rel="stylesheet" href="../../../component/body/login-form/login-form.css" />
+
+  <script type="module" src="../../../component/header/navigator/navigator.js" defer></script>
+  <script type="module" src="../../../component/footer/footer.js" defer></script>
+
+  <script type="module" src="./login.js" defer></script>
 </head>
 
 <body>
-    <main class="login-page">
-        <section class="login-section">
-            <h1 class="page-title">로그인</h1>
+  <header id="header-root"></header>
 
-            <!-- JS로 폼이 주입될 자리 -->
-            <div id="login-form-root"></div>
+  <main class="container">
+    <section class="login-page">
+      <div class="login-section">
+        <h1 class="page-title">로그인</h1>
 
-            <p class="signup-cta">
-                아직 회원이 아니신가요?
-                <a href="../signup/signup.html">회원가입</a>
-            </p>
-        </section>
-    </main>
+        <div id="login-form-root"></div>
+      </div>
+    </section>
+  </main>
+
+  <footer id="footer-root"></footer>
 </body>
 
 </html>
