--- a/public/pages/auth/login/login.html
+++ b/public/pages/auth/login/login.html
@@ -6,18 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>로그인 | Community App</title>
 
-    <link rel="stylesheet" href="../../../component/body/login_wrap/login_wrap.css" />
+    <link rel="stylesheet" href = "../../../component/common/header/navigator/navigator.css">
+    <link rel="stylesheet" href="../../../component/auth/login_wrap/login_wrap.css" />
     <script type="module" src="login.js" defer></script>
 </head>
 
 <body>
+    <header class="header" role="banner">
+        <div id="navigator" class="navigator"></div>
+    </header>
     <div class="wrap">
-        <main id="container" class="container">
+        <div id="container" class="container">
             <div class="content">
                 <div id="login_wrap" class = "login_wrap"></div>
             </div>
-        </main>
+        </div>
     </div>
+    <div class="footer"></div>
+
 </body>
 
 </html>
