--- a/public/pages/auth/login/login.html
+++ b/public/pages/auth/login/login.html
@@ -6,24 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>로그인 | Community App</title>
 
-    <link rel="stylesheet" href = "../../../component/common/header/navigator/navigator.css">
+    <link rel="stylesheet" href="../../../component/auth/header/header.css">
     <link rel="stylesheet" href="../../../component/auth/login_wrap/login_wrap.css" />
+    <link rel="stylesheet" href="../../../component/auth/login_wrap/find_wrap.css" />
+    <link rel="stylesheet" href="../../../component/auth/gladbanner/gladbanne.css" />
+    <link rel="stylesheet" href="../../../component/common/footer/footer_inner.css" />
+
     <script type="module" src="login.js" defer></script>
 </head>
 
 <body>
-    <header class="header" role="banner">
-        <div id="navigator" class="navigator"></div>
-    </header>
     <div class="wrap">
+        <header id="header" class="header" role="banner"></header>
         <div id="container" class="container">
             <div class="content">
-                <div id="login_wrap" class = "login_wrap"></div>
+                <div id="login_wrap" class="login_wrap"></div>
+                <div id="find_wrap" class="find_wrap"></div>
+                <div id="gladbanner" class="gladbanner"></div>
             </div>
         </div>
-    </div>
-    <div class="footer"></div>
 
+        
+
+        <div id = "footer" class="footer"></div>
+    </div>
 </body>
 
 </html>
